Code cleanup - Refactor to use Java 11 Set.copyOf() instead of Collections.unmodifiableSet()